# voc4cat-tool

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .typos.toml  .zenodo.json  CHANGELOG.md  CITATION.bib  CITATION.cff  CLAUDE.md  LICENSE  README.md  TASKS.md  justfile  merge_vocab.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini  vocexcel4cat.py  vocexcel_4cat.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  merge.yml  pypi-publish.yml
docs/: about.md  conf.py  index.md  index.rst  migration-to-v1.0.md
docs/_extra/: robots.txt
docs/getting-started/: core-principles.md  installation.md
docs/reference/: cli.md  schemas.md
docs/user-guide/: contributing.md  local-development.md  maintaining.md  project-setup.md
example/: Photocatalsis_LIKAT_template043.xlsx  Photocatalsis_LIKAT_template043_i.xlsx  Photocatalsis_LIKAT_template043_i_r.ttl  Photocatalsis_LIKAT_template043_i_r.xlsx  Photocatalsis_LIKAT_template043_iri.xlsx  Photocatalysis_LIKAT_template043_final.ttl  Photocatalysis_LIKAT_template043_final.xlsx  Photocatalysis_LIKAT_template043_from-indent.xlsx  Photocatalysis_LIKAT_template043_from-indent_final.xlsx  Photocatalysis_LIKAT_template043_indent.xlsx  Photocatalysis_LIKAT_template043_indent_formula.xlsx  Photocatalysis_LIKAT_template043_indent_iri.xlsx  Photocatalysis_LIKAT_template043_orig-fixed.xlsx  Photocatalysis_LIKAT_template043_textids.xlsx  README.md  concept_hierarchy_043_4Cat.xlsx  demo_xlsx_adapt_to_model.py  demo_xlsx_joins.py  demo_xlsx_keyvalue_data.py  demo_xlsx_keyvalue_styling.py  demo_xlsx_table_data.py  demo_xlsx_table_styling.py  demo_xlsx_vocab_template_create.py  demo_xlsx_vocab_template_read.py  idranges.toml  indent_043_4Cat.xlsx  indent_3spaces_043_4Cat.xlsx  photocatalysis_example.ttl  photocatalysis_example.xlsx  photocatalysis_example_Template-1.0-r2025-06-11.xlsx  photocatalysis_example_indented_prelim-IDs.xlsx  photocatalysis_example_prelim-IDs.xlsx
example/voc4cat-043/: voc4cat.ttl
example/voc4cat-v1.0/: Upgrade-v1.0-plan.md  idranges.toml  voc4cat.ttl
inbox-excel-vocab/: README.md
inbox-excel-vocabs/: Photocatalsis_Example_LIKAT_template043_4Cat_NM.xlsx  Photocatalsis_Example_LIKAT_template043_4Cat_NM_i_r.ttl  Photocatalsis_LIKAT_template043.xlsx  photocatalysis_LIKAT.xlsx
src/voc4cat/: __init__.py  assistant.py  blank_043.xlsx  check.py  checks.py  cli.py  config.py  convert.py  convert_043.py  convert_v1.py  convert_v1_helpers.py  dag_util.py  docs.py  fields.py  gen_template.py  gh_index.py  merge_vocab.py  models.py  models_v1.py  profiles.py  template_v1.py  transform.py  util.py  utils.py  validator.vocpub.ttl  wrapper.py  xlsx_api.py  xlsx_common.py  xlsx_keyvalue.py  xlsx_table.py
src/voc4cat/jinja_templates/: pylode.css  vocabularies.html
src/voc4cat/profile/: readme.md  specification-vocpub-4.7.md  specification-vocpub-5.2.md  specification-vocpub-pre3.0.md  vocpub-4.7.ttl  vocpub-5.2.ttl  vp4cat-5.2.ttl  vp4cat.ttl
src/voc4cat/templates/docs/: index.html
src/voc4cat/templates/vocab/: README.md  blank_043.xlsx  blank_1.0.xlsx  blank_1.0_min.xlsx  idranges.toml
templates/: README.md  VocExcel-template_043_4Cat.xlsx  idranges.toml  voc4cat_template_044.xlsx
tests/: __init__.py  conftest.py  test_check.py  test_checks.py  test_cli.py  test_config.py  test_convert.py  test_convert_043.py  test_convert_v1.py  test_dag_util.py  test_docs.py  test_fields.py  test_gen_template.py  test_merge_vocab.py  test_models.py  test_roundtrip_v1.py  test_template043.py  test_template_v1.py  test_transform.py  test_util.py  test_utils.py  test_wrapper.py  test_xlsx_api.py  test_xlsx_common.py  test_xlsx_integration.py  test_xlsx_keyvalue.py  test_xlsx_table.py
tests/data/: README.md  concept-scheme-badfile.ttl  concept-scheme-duplicates.xlsx  concept-scheme-simple.ttl  concept-scheme-simple.xlsx  concept-scheme-with-cycles.ttl  concept-scheme-with-cycles.xlsx  concept-scheme-with-cycles_indent-by-dot.xlsx  concept-scheme-with-cycles_indent.xlsx  concept-scheme-with-cycles_indent_iri.xlsx  concept-scheme-with-cycles_multilang.xlsx  concept-scheme-with-cycles_multilang_indent_iri.xlsx  idranges_with_scheme.toml  v1-test-comprehensive.ttl  valid_idranges.toml  vocab-043-test.ttl
tests/templ_versions/: 043_exhaustive_example.xlsx  043_exhaustive_example_perfect_output.ttl  043_simple_valid.xlsx
vocabularies/: Photocatalsis_LIKAT_template043.ttl  Photocatalysis_LIKAT.ttl  README.md
